# trivia-bot-ultimate

./: LICENSE  README.md
bridge/: bridge_server.py  pipe_handler.cpp  pipe_handler.h
config/: settings.json
core/: CMakeLists.txt  capture.cpp  capture.h  coordinate_mapper.cpp  coordinate_mapper.h  feedback_queue.cpp  feedback_queue.h  main.cpp  matcher.cpp  matcher.h  robust_screenshot_validator.cpp  robust_screenshot_validator.h  tap_executor.cpp  tap_executor.h  ui_elements_detector.cpp  ui_elements_detector.h
intelligence/: answer_validator.py  api_client.py  background_learning_processor.py  cache_db.py  database_setup.py  decision_engine.py  embedding_engine.py  feedback_analyzer.py  learning_db.py  learning_updater.py  question_hasher.py  similarity_checker.py  tinyllm_db.py  tinyllm_engine.py
utils/: config_manager.py  logger.py  run_ultimate.sh  stats_tracker.py
